# filetools

./: .gitignore  CHANGELOG.md  LICENSE  README.md  create_release.sh  install.bat  install.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
converter/: __init__.py  __main__.py  cli.py  core.py
converter/formats/: data.py  documents.py  images.py
release/v0.1.0/: RELEASE_NOTES.md
searcher/: __init__.py  __main__.py  cli.py  core.py  output.py
tests/: conftest.py  test_converter.py  test_searcher.py
